Enhance package generation and update templates for types-archetypal
- Added EppyStubGenerator integration for generating stubs.
- Updated template context with new package data structure.
- Modified README and setup templates to reflect changes in package naming.
- Removed outdated idf.pyi.jinja2 and added new idf.pyi.jinja2 with overloads.
- Introduced py.typed file for type hinting support.

--- a/src/mypy_eppy_builder/templates/common/header.md.jinja2
+++ b/src/mypy_eppy_builder/templates/common/header.md.jinja2
@@ -1,6 +1,6 @@
-# {{ package.pypi_name }}
+# {{ package.data.pypi_name }}
 
-[![PyPI - {{ package.pypi_name }}]({{ package.url.pypi_badge }})]({{ package.url.pypi }})
+[![PyPI - {{ package.data.pypi_name }}]({{ package.url.pypi_badge }})]({{ package.url.pypi }})
 [![PyPI - Python Version]({{ package.url.pyversions_badge }})]({{ package.url.pypi }})
 [![Docs]({{ package.url.rtd_badge }})]({{ package.url.docs }})
 [![PyPI - Downloads]({{ package.url.pepy_badge }})]({{ package.url.pypistats }})
