Quote library name in wrapper template

--- a/src/mypy_eppy_builder/templates/common/wrapper/pyproject.toml.jinja2
+++ b/src/mypy_eppy_builder/templates/common/wrapper/pyproject.toml.jinja2
@@ -11,7 +11,7 @@ classifiers = [
     "Typing :: Stubs Only",
     "Programming Language :: Python :: 3",
 ]
-keywords = [{{ package.library_name }}, "typing", "stubs"]
+keywords = ["{{ package.library_name }}", "typing", "stubs"]
 dependencies = []
 
 [build-system]
