--- a/src/mypy_eppy_builder/templates/common/class_stub.pyi.jinja2
+++ b/src/mypy_eppy_builder/templates/common/class_stub.pyi.jinja2
@@ -1,4 +1,5 @@
-from typing import Literal
+from typing import Annotated, Literal
+from pydantic import Field
 
 from geomeppy.patches import EpBunch
 
@@ -10,7 +11,7 @@ class {{ classname }}(EpBunch):
     {%- if fields %}
     {%- for field in fields %}
 
-    {{ field.name }}: {{ field.type }}{%- if field.default not in [none, ''] %} = {% if field.type == 'str' or field.type.startswith('Literal') %}"{{ field.default }}"{%- else -%}{{ field.default }}{%- endif -%}{% endif %}
+    {{ field.name }}: {{ field.type }}{%- if field.field_call %} = {{ field.field_call }}{% endif %}
     {%- if field.note %}
     """{{ field.note.strip() }}"""
     {%- endif %}
