Add stubs for additional IDF methods

--- a/src/mypy_eppy_builder/templates/common/modeleditor.pyi.jinja2
+++ b/src/mypy_eppy_builder/templates/common/modeleditor.pyi.jinja2
@@ -1,4 +1,4 @@
-{# idf.pyi.jinja2 #}
+{# modeleditor.pyi.jinja2 #}
 from typing import overload, Literal
 
 from {{ package.epbunch_path }} import EpBunch
@@ -10,9 +10,7 @@ from {{ package.data.pypi_stubs_name }}.{{ classname }} import {{ classname }}
 class IDF:
 {% for classname, ep_key in overloads %}
     @overload
-    def newidfobject(self, key: Literal["{{ ep_key }}"], **kwargs) -> {{ classname }}: ...
-    @overload
-    def idfobjects(self, key: Literal["{{ ep_key }}"]) -> list[{{ classname }}]: ...
+    def newidfobject(self, key: Literal["{{ ep_key }}"], defaultvalues: bool = True, **kwargs) -> {{ classname }}: ...
     @overload
     def popidfobject(self, key: Literal["{{ ep_key }}"], index: int) -> {{ classname }}: ...
     @overload
@@ -21,8 +19,7 @@ class IDF:
     def removeextensibles(self, key: Literal["{{ ep_key }}"], name: str) -> {{ classname }}: ...
 {% endfor %}
 
-    def newidfobject(self, key: str, **kwargs) -> EpBunch: ...
-    def idfobjects(self, key: str) -> list[EpBunch]: ...
+    def newidfobject(self, key: str, defaultvalues: bool = True, **kwargs) -> EpBunch: ...
     def popidfobject(self, key: str, index: int) -> EpBunch: ...
     def getobject(self, key: str, name: str) -> EpBunch: ...
     def copyidfobject(self, idfobject: EpBunch) -> EpBunch: ...
