--- a/src/mypy_eppy_builder/templates/types-archetypal/src/archetypal-stubs/idfclass/idf.pyi.jinja2
+++ b/src/mypy_eppy_builder/templates/types-archetypal/src/archetypal-stubs/idfclass/idf.pyi.jinja2
@@ -1,5 +1,5 @@
 {# idf.pyi.jinja2 #}
-from typing import overload, Literal
+from typing import overload, Literal, Iterable
 
 from {{ package.epbunch_path }} import EpBunch
 
@@ -13,7 +13,21 @@ class IDF:
     def newidfobject(self, key: Literal["{{ ep_key }}"], **kwargs) -> {{ classname }}: ...
     @overload
     def idfobjects(self, key: Literal["{{ ep_key }}"]) -> list[{{ classname }}]: ...
+    @overload
+    def popidfobject(self, key: Literal["{{ ep_key }}"], index: int) -> {{ classname }}: ...
+    @overload
+    def getobject(self, key: Literal["{{ ep_key }}"], name: str) -> {{ classname }}: ...
+    @overload
+    def removeextensibles(self, key: Literal["{{ ep_key }}"], name: str) -> {{ classname }}: ...
 {% endfor %}
 
     def newidfobject(self, key: str, **kwargs) -> EpBunch: ...
     def idfobjects(self, key: str) -> list[EpBunch]: ...
+    def popidfobject(self, key: str, index: int) -> EpBunch: ...
+    def getobject(self, key: str, name: str) -> EpBunch: ...
+    def copyidfobject(self, idfobject: EpBunch) -> EpBunch: ...
+    def removeextensibles(self, key: str, name: str) -> EpBunch: ...
+    def addidfobject(self, new_object: EpBunch) -> EpBunch: ...
+    def removeidfobjects(self, idfobjects: Iterable[EpBunch]) -> list[EpBunch]: ...
+    def anidfobject(self, key: str, aname: str = "", **kwargs) -> EpBunch: ...
+    def rename(self, objkey: str, objname: str, newname: str) -> EpBunch: ...
