--- a/src/mypy_eppy_builder/templates/types-archetypal/src/archetypal-stubs/idfclass/idf.pyi.jinja2
+++ b/src/mypy_eppy_builder/templates/types-archetypal/src/archetypal-stubs/idfclass/idf.pyi.jinja2
@@ -8,6 +8,13 @@ from {{ package.data.pypi_stubs_name }}.{{ classname }} import {{ classname }}
 {% endfor %}
 
 class IDF:
+{% if version_classname %}
+    @overload
+    def __init__(self: {{ version_classname }}, *, as_version: Literal["{{ eplus_version }}"], **kwargs) -> None: ...
+    @overload
+    def __init__(self: {{ version_classname }}, *, file_version: Literal["{{ eplus_version }}"], **kwargs) -> None: ...
+{% endif %}
+    def __init__(self, *args, **kwargs) -> None: ...
 {% for classname, ep_key in overloads %}
     @overload
     def newidfobject(self, key: Literal["{{ ep_key }}"], **kwargs) -> {{ classname }}: ...
@@ -31,3 +38,8 @@ class IDF:
     def removeidfobjects(self, idfobjects: Iterable[EpBunch]) -> list[EpBunch]: ...
     def anidfobject(self, key: str, aname: str = "", **kwargs) -> EpBunch: ...
     def rename(self, objkey: str, objname: str, newname: str) -> EpBunch: ...
+
+{% if version_classname %}
+class {{ version_classname }}(IDF):
+    pass
+{% endif %}
