--- a/src/mypy_eppy_builder/templates/common/class_stub.pyi.jinja2
+++ b/src/mypy_eppy_builder/templates/common/class_stub.pyi.jinja2
@@ -11,7 +11,7 @@ class {{ classname }}(EpBunch):
     {%- if fields %}
     {%- for field in fields %}
 
-    {{ field.name }}: {{ field.type }}{%- if field.field_call %} = {{ field.field_call }}{% endif %}
+    {{ field.name }}: {{ field.type }}
     {%- if field.note %}
     """{{ field.note.strip() }}"""
     {%- endif %}
