Refactor IDF class initialization and update test script to remove file_version parameter

--- a/src/mypy_eppy_builder/templates/common/idf.pyi.jinja2
+++ b/src/mypy_eppy_builder/templates/common/idf.pyi.jinja2
@@ -1,24 +1,37 @@
-from typing import Literal, TypedDict, overload
+from typing import overload, Literal, Iterable, TypedDict
 
-from geomeppy.patches import EpBunch
+from {{ package.epbunch_path }} import EpBunch
 
 {% for classname in classnames %}
-from eppy.{{ classname }} import {{ classname }}
+from {{ package.data.pypi_stubs_name }}.{{ classname }} import {{ classname }}
 {% endfor %}
 
 IDFObjectsDict = TypedDict('IDFObjectsDict', {
-{%- for overload in overloads %}
-    '{{ overload.key }}': list[{{ overload.classname }}],
-{%- endfor %}
+{% for classname, ep_key in overloads %}
+    '{{ ep_key }}': list[{{ classname }}],
+{% endfor %}
 })
 
 class IDF:
-{%- for overload in overloads %}
-
+{% for classname, ep_key in overloads %}
     @overload
-    def newidfobject(self, key: Literal["{{ overload.key }}"], **kwargs) -> {{ overload.classname }}: ...
-{%- endfor %}
+    def newidfobject(self, key: Literal["{{ ep_key }}"], **kwargs) -> {{ classname }}: ...
+    @overload
+    def popidfobject(self, key: Literal["{{ ep_key }}"], index: int) -> {{ classname }}: ...
+    @overload
+    def getobject(self, key: Literal["{{ ep_key }}"], name: str) -> {{ classname }}: ...
+    @overload
+    def removeextensibles(self, key: Literal["{{ ep_key }}"], name: str) -> {{ classname }}: ...
+{% endfor %}
 
     def newidfobject(self, key: str, **kwargs) -> EpBunch: ...
     @property
     def idfobjects(self) -> IDFObjectsDict: ...
+    def popidfobject(self, key: str, index: int) -> EpBunch: ...
+    def getobject(self, key: str, name: str) -> EpBunch: ...
+    def copyidfobject(self, idfobject: EpBunch) -> EpBunch: ...
+    def removeextensibles(self, key: str, name: str) -> EpBunch: ...
+    def addidfobject(self, new_object: EpBunch) -> EpBunch: ...
+    def removeidfobjects(self, idfobjects: Iterable[EpBunch]) -> list[EpBunch]: ...
+    def anidfobject(self, key: str, aname: str = "", **kwargs) -> EpBunch: ...
+    def rename(self, objkey: str, objname: str, newname: str) -> EpBunch: ...
