Update archetypal dependency to version 2.18.9 and enhance field name normalization in EppyStubGenerator

--- a/src/mypy_eppy_builder/templates/version-package/pyproject.toml.jinja2
+++ b/src/mypy_eppy_builder/templates/version-package/pyproject.toml.jinja2
@@ -1,7 +1,7 @@
 [project]
 name = "{{ package_name }}"
 version = "0.1.0"
-description = "Type stubs for EnergyPlus {{ eplus_version }}"
+description = "Type stubs for EnergyPlusV{{ eplus_version }}"
 readme = "README.md"
 requires-python = ">=3.9"
 classifiers = [
