--- a/src/mypy_eppy_builder/templates/version-package/README.md.jinja2
+++ b/src/mypy_eppy_builder/templates/version-package/README.md.jinja2
@@ -1,3 +1,3 @@
 # {{ package_name }}
 
-Type stubs for EnergyPlus {{ eplus_version }} generated with [{{ builder_package_name }} {{ builder_version }}]({{ builder_repo_url }}).
+Type stubs for EnergyPlusV{{ eplus_version }} generated with [{{ builder_package_name }} {{ builder_version }}]({{ builder_repo_url }}).
